manual publish with working pop removal

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
               <a href='reports/BytecodeReport-TestExample.html'>TestExample</a>
             </td>
           </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-TestExampleIfElse.html'>TestExampleIfElse</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href='reports/BytecodeReport-TestExampleMultiAssignment.html'>TestExampleMultiAssignment</a>
+            </td>
+          </tr>
         </table>
       </div>
     </div>
