--- a/reports/BytecodeReport-BasicPersonScript.html
+++ b/reports/BytecodeReport-BasicPersonScript.html
@@ -32,6 +32,9 @@ p.last = 'Strater'
 </code>
       </pre>
     </div>
+    <div class='row col-sm-12'>
+      <h1>BEFORE</h1>
+    </div>
     <div class='row col-lg-12'>
       <div class='col-md-4'>
         <h2 class='text-center'>Groovyc (Legacy)</h2>
@@ -277,6 +280,268 @@ public class BasicPersonScript extends groovy.lang.Script {
       33: areturn
       34: aconst_null
       35: areturn
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #56                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class BasicPersonScript
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #62                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #64                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #56                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #70                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #64                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #73                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+}
+</code>
+        </pre>
+      </div>
+    </div>
+    <div class='col-sm-12'>
+      <h2>AFTER</h2>
+    </div>
+    <div class='row col-lg-12'>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Groovyc (Legacy)</h2>
+        <pre>
+          <code class='assembly'>Compiled from "BasicPersonScript.groovy"
+public class BasicPersonScript extends groovy.lang.Script {
+  public static transient boolean __$stMC;
+
+  public BasicPersonScript();
+    Code:
+       0: aload_0
+       1: invokespecial #15                 // Method groovy/lang/Script."&lt;init&gt;":()V
+       4: invokestatic  #19                 // Method $getCallSiteArray:()[Lorg/codehaus/groovy/runtime/callsite/CallSite;
+       7: astore_1
+       8: return
+
+  public BasicPersonScript(groovy.lang.Binding);
+    Code:
+       0: invokestatic  #19                 // Method $getCallSiteArray:()[Lorg/codehaus/groovy/runtime/callsite/CallSite;
+       3: astore_2
+       4: aload_0
+       5: aload_1
+       6: invokespecial #24                 // Method groovy/lang/Script."&lt;init&gt;":(Lgroovy/lang/Binding;)V
+       9: return
+
+  public static void main(java.lang.String...);
+    Code:
+       0: invokestatic  #19                 // Method $getCallSiteArray:()[Lorg/codehaus/groovy/runtime/callsite/CallSite;
+       3: astore_1
+       4: aload_1
+       5: ldc           #29                 // int 0
+       7: aaload
+       8: ldc           #31                 // class org/codehaus/groovy/runtime/InvokerHelper
+      10: ldc           #2                  // class BasicPersonScript
+      12: aload_0
+      13: invokeinterface #37,  4           // InterfaceMethod org/codehaus/groovy/runtime/callsite/CallSite.call:(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)Ljava/lang/Object;
+      18: pop
+      19: return
+
+  public java.lang.Object run();
+    Code:
+       0: invokestatic  #19                 // Method $getCallSiteArray:()[Lorg/codehaus/groovy/runtime/callsite/CallSite;
+       3: astore_1
+       4: aload_1
+       5: ldc           #42                 // int 1
+       7: aaload
+       8: ldc           #44                 // class Person
+      10: invokeinterface #48,  2           // InterfaceMethod org/codehaus/groovy/runtime/callsite/CallSite.callConstructor:(Ljava/lang/Object;)Ljava/lang/Object;
+      15: ldc           #44                 // class Person
+      17: invokestatic  #54                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.castToType:(Ljava/lang/Object;Ljava/lang/Class;)Ljava/lang/Object;
+      20: checkcast     #44                 // class Person
+      23: astore_2
+      24: ldc           #56                 // String Jenn
+      26: astore_3
+      27: aload_3
+      28: ldc           #2                  // class BasicPersonScript
+      30: aload_2
+      31: ldc           #58                 // String first
+      33: checkcast     #60                 // class java/lang/String
+      36: invokestatic  #64                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.setGroovyObjectProperty:(Ljava/lang/Object;Ljava/lang/Class;Lgroovy/lang/GroovyObject;Ljava/lang/String;)V
+      39: ldc           #66                 // String Strater
+      41: astore        4
+      43: aload         4
+      45: ldc           #2                  // class BasicPersonScript
+      47: aload_2
+      48: ldc           #68                 // String last
+      50: checkcast     #60                 // class java/lang/String
+      53: invokestatic  #64                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.setGroovyObjectProperty:(Ljava/lang/Object;Ljava/lang/Class;Lgroovy/lang/GroovyObject;Ljava/lang/String;)V
+      56: aload         4
+      58: areturn
+      59: aconst_null
+      60: areturn
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #78                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class BasicPersonScript
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #82                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #84                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #78                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #90                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #84                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #93                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+}
+</code>
+        </pre>
+      </div>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Invoke Dynamic</h2>
+        <pre>
+          <code class='assembly'>Compiled from "BasicPersonScript.groovy"
+public class BasicPersonScript extends groovy.lang.Script {
+  public static transient boolean __$stMC;
+
+  public BasicPersonScript();
+    Code:
+       0: aload_0
+       1: invokespecial #13                 // Method groovy/lang/Script."&lt;init&gt;":()V
+       4: return
+
+  public BasicPersonScript(groovy.lang.Binding);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: invokespecial #18                 // Method groovy/lang/Script."&lt;init&gt;":(Lgroovy/lang/Binding;)V
+       5: return
+
+  public static void main(java.lang.String...);
+    Code:
+       0: ldc           #24                 // class org/codehaus/groovy/runtime/InvokerHelper
+       2: ldc           #2                  // class BasicPersonScript
+       4: aload_0
+       5: invokedynamic #38,  0             // InvokeDynamic #0:invoke:(Ljava/lang/Class;Ljava/lang/Class;[Ljava/lang/String;)Ljava/lang/Object;
+      10: pop
+      11: return
+
+  public java.lang.Object run();
+    Code:
+       0: ldc           #44                 // class Person
+       2: invokedynamic #49,  0             // InvokeDynamic #1:init:(Ljava/lang/Class;)Ljava/lang/Object;
+       7: invokedynamic #55,  0             // InvokeDynamic #2:cast:(Ljava/lang/Object;)LPerson;
+      12: astore_1
+      13: ldc           #57                 // String Jenn
+      15: astore_2
+      16: aload_2
+      17: ldc           #2                  // class BasicPersonScript
+      19: aload_1
+      20: ldc           #59                 // String first
+      22: checkcast     #61                 // class java/lang/String
+      25: invokestatic  #67                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.setGroovyObjectProperty:(Ljava/lang/Object;Ljava/lang/Class;Lgroovy/lang/GroovyObject;Ljava/lang/String;)V
+      28: ldc           #69                 // String Strater
+      30: astore_3
+      31: aload_3
+      32: ldc           #2                  // class BasicPersonScript
+      34: aload_1
+      35: ldc           #71                 // String last
+      37: checkcast     #61                 // class java/lang/String
+      40: invokestatic  #67                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.setGroovyObjectProperty:(Ljava/lang/Object;Ljava/lang/Class;Lgroovy/lang/GroovyObject;Ljava/lang/String;)V
+      43: aload_3
+      44: areturn
+      45: nop
+      46: athrow
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #83                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class BasicPersonScript
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #87                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #89                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #83                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #95                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #89                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #98                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+}
+</code>
+        </pre>
+      </div>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Static Compilation</h2>
+        <pre>
+          <code class='assembly'>Compiled from "BasicPersonScript.groovy"
+public class BasicPersonScript extends groovy.lang.Script {
+  public static transient boolean __$stMC;
+
+  public BasicPersonScript();
+    Code:
+       0: aload_0
+       1: invokespecial #13                 // Method groovy/lang/Script."&lt;init&gt;":()V
+       4: return
+
+  public BasicPersonScript(groovy.lang.Binding);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: invokespecial #18                 // Method groovy/lang/Script."&lt;init&gt;":(Lgroovy/lang/Binding;)V
+       5: return
+
+  public static void main(java.lang.String...);
+    Code:
+       0: ldc           #2                  // class BasicPersonScript
+       2: aload_0
+       3: invokestatic  #28                 // Method org/codehaus/groovy/runtime/InvokerHelper.runScript:(Ljava/lang/Class;[Ljava/lang/String;)Ljava/lang/Object;
+       6: pop
+       7: return
+
+  public java.lang.Object run();
+    Code:
+       0: new           #34                 // class Person
+       3: dup
+       4: invokespecial #35                 // Method Person."&lt;init&gt;":()V
+       7: astore_1
+       8: ldc           #37                 // String Jenn
+      10: dup
+      11: astore_2
+      12: aload_1
+      13: aload_2
+      14: invokevirtual #41                 // Method Person.setFirst:(Ljava/lang/String;)V
+      17: pop
+      18: ldc           #43                 // String Strater
+      20: dup
+      21: astore_3
+      22: aload_1
+      23: aload_3
+      24: invokevirtual #46                 // Method Person.setLast:(Ljava/lang/String;)V
+      27: areturn
+      28: aconst_null
+      29: areturn
 
   protected groovy.lang.MetaClass $getStaticMetaClass();
     Code:
