--- a/reports/BytecodeReport-Person.html
+++ b/reports/BytecodeReport-Person.html
@@ -28,6 +28,9 @@
 </code>
       </pre>
     </div>
+    <div class='row col-sm-12'>
+      <h1>BEFORE</h1>
+    </div>
     <div class='row col-lg-12'>
       <div class='col-md-4'>
         <h2 class='text-center'>Groovyc (Legacy)</h2>
@@ -304,6 +307,385 @@ public class Person implements groovy.lang.GroovyObject {
       15: aload_1
       16: pop
       17: return
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #32                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class Person
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #38                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #40                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #32                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #46                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #40                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #49                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+
+  public groovy.lang.MetaClass getMetaClass();
+    Code:
+       0: aload_0
+       1: getfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+       4: dup
+       5: ifnull        9
+       8: areturn
+       9: pop
+      10: aload_0
+      11: dup
+      12: invokevirtual #24                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+      15: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      18: aload_0
+      19: getfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      22: areturn
+
+  public void setMetaClass(groovy.lang.MetaClass);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+       5: return
+
+  public java.lang.Object invokeMethod(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #54                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #59,  4           // InterfaceMethod groovy/lang/MetaClass.invokeMethod:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)Ljava/lang/Object;
+      12: areturn
+
+  public java.lang.Object getProperty(java.lang.String);
+    Code:
+       0: aload_0
+       1: invokevirtual #54                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: invokeinterface #64,  3           // InterfaceMethod groovy/lang/MetaClass.getProperty:(Ljava/lang/Object;Ljava/lang/String;)Ljava/lang/Object;
+      11: areturn
+
+  public void setProperty(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #54                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #69,  4           // InterfaceMethod groovy/lang/MetaClass.setProperty:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)V
+      12: return
+
+  public java.lang.String getFirst();
+    Code:
+       0: aload_0
+       1: getfield      #73                 // Field first:Ljava/lang/String;
+       4: areturn
+
+  public void setFirst(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #73                 // Field first:Ljava/lang/String;
+       5: return
+
+  public java.lang.String getLast();
+    Code:
+       0: aload_0
+       1: getfield      #78                 // Field last:Ljava/lang/String;
+       4: areturn
+
+  public void setLast(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #78                 // Field last:Ljava/lang/String;
+       5: return
+}
+</code>
+        </pre>
+      </div>
+    </div>
+    <div class='col-sm-12'>
+      <h2>AFTER</h2>
+    </div>
+    <div class='row col-lg-12'>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Groovyc (Legacy)</h2>
+        <pre>
+          <code class='assembly'>Compiled from "Person.groovy"
+public class Person implements groovy.lang.GroovyObject {
+  public static transient boolean __$stMC;
+
+  public Person();
+    Code:
+       0: aload_0
+       1: invokespecial #22                 // Method java/lang/Object."&lt;init&gt;":()V
+       4: invokestatic  #26                 // Method $getCallSiteArray:()[Lorg/codehaus/groovy/runtime/callsite/CallSite;
+       7: astore_1
+       8: aload_0
+       9: invokevirtual #30                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+      12: astore_2
+      13: aload_2
+      14: aload_0
+      15: swap
+      16: putfield      #32                 // Field metaClass:Lgroovy/lang/MetaClass;
+      19: return
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #38                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class Person
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #44                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #46                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #38                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #52                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #46                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #55                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+
+  public groovy.lang.MetaClass getMetaClass();
+    Code:
+       0: aload_0
+       1: getfield      #32                 // Field metaClass:Lgroovy/lang/MetaClass;
+       4: dup
+       5: ifnull        9
+       8: areturn
+       9: pop
+      10: aload_0
+      11: dup
+      12: invokevirtual #30                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+      15: putfield      #32                 // Field metaClass:Lgroovy/lang/MetaClass;
+      18: aload_0
+      19: getfield      #32                 // Field metaClass:Lgroovy/lang/MetaClass;
+      22: areturn
+
+  public void setMetaClass(groovy.lang.MetaClass);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #32                 // Field metaClass:Lgroovy/lang/MetaClass;
+       5: return
+
+  public java.lang.Object invokeMethod(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #60                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #65,  4           // InterfaceMethod groovy/lang/MetaClass.invokeMethod:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)Ljava/lang/Object;
+      12: areturn
+
+  public java.lang.Object getProperty(java.lang.String);
+    Code:
+       0: aload_0
+       1: invokevirtual #60                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: invokeinterface #70,  3           // InterfaceMethod groovy/lang/MetaClass.getProperty:(Ljava/lang/Object;Ljava/lang/String;)Ljava/lang/Object;
+      11: areturn
+
+  public void setProperty(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #60                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #75,  4           // InterfaceMethod groovy/lang/MetaClass.setProperty:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)V
+      12: return
+
+  public java.lang.String getFirst();
+    Code:
+       0: aload_0
+       1: getfield      #79                 // Field first:Ljava/lang/String;
+       4: areturn
+
+  public void setFirst(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #79                 // Field first:Ljava/lang/String;
+       5: return
+
+  public java.lang.String getLast();
+    Code:
+       0: aload_0
+       1: getfield      #84                 // Field last:Ljava/lang/String;
+       4: areturn
+
+  public void setLast(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #84                 // Field last:Ljava/lang/String;
+       5: return
+}
+</code>
+        </pre>
+      </div>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Invoke Dynamic</h2>
+        <pre>
+          <code class='assembly'>Compiled from "Person.groovy"
+public class Person implements groovy.lang.GroovyObject {
+  public static transient boolean __$stMC;
+
+  public Person();
+    Code:
+       0: aload_0
+       1: invokespecial #20                 // Method java/lang/Object."&lt;init&gt;":()V
+       4: aload_0
+       5: invokevirtual #24                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+       8: astore_1
+       9: aload_1
+      10: aload_0
+      11: swap
+      12: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      15: return
+
+  protected groovy.lang.MetaClass $getStaticMetaClass();
+    Code:
+       0: aload_0
+       1: invokevirtual #32                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+       4: ldc           #2                  // class Person
+       6: if_acmpeq     14
+       9: aload_0
+      10: invokestatic  #38                 // Method org/codehaus/groovy/runtime/ScriptBytecodeAdapter.initMetaClass:(Ljava/lang/Object;)Lgroovy/lang/MetaClass;
+      13: areturn
+      14: getstatic     #40                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      17: astore_1
+      18: aload_1
+      19: ifnonnull     34
+      22: aload_0
+      23: invokevirtual #32                 // Method java/lang/Object.getClass:()Ljava/lang/Class;
+      26: invokestatic  #46                 // Method org/codehaus/groovy/reflection/ClassInfo.getClassInfo:(Ljava/lang/Class;)Lorg/codehaus/groovy/reflection/ClassInfo;
+      29: dup
+      30: astore_1
+      31: putstatic     #40                 // Field $staticClassInfo:Lorg/codehaus/groovy/reflection/ClassInfo;
+      34: aload_1
+      35: invokevirtual #49                 // Method org/codehaus/groovy/reflection/ClassInfo.getMetaClass:()Lgroovy/lang/MetaClass;
+      38: areturn
+
+  public groovy.lang.MetaClass getMetaClass();
+    Code:
+       0: aload_0
+       1: getfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+       4: dup
+       5: ifnull        9
+       8: areturn
+       9: pop
+      10: aload_0
+      11: dup
+      12: invokevirtual #24                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+      15: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      18: aload_0
+      19: getfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      22: areturn
+
+  public void setMetaClass(groovy.lang.MetaClass);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+       5: return
+
+  public java.lang.Object invokeMethod(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #56                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #59,  4           // InterfaceMethod groovy/lang/MetaClass.invokeMethod:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)Ljava/lang/Object;
+      12: areturn
+
+  public java.lang.Object getProperty(java.lang.String);
+    Code:
+       0: aload_0
+       1: invokevirtual #56                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: invokeinterface #64,  3           // InterfaceMethod groovy/lang/MetaClass.getProperty:(Ljava/lang/Object;Ljava/lang/String;)Ljava/lang/Object;
+      11: areturn
+
+  public void setProperty(java.lang.String, java.lang.Object);
+    Code:
+       0: aload_0
+       1: invokevirtual #56                 // Method getMetaClass:()Lgroovy/lang/MetaClass;
+       4: aload_0
+       5: aload_1
+       6: aload_2
+       7: invokeinterface #69,  4           // InterfaceMethod groovy/lang/MetaClass.setProperty:(Ljava/lang/Object;Ljava/lang/String;Ljava/lang/Object;)V
+      12: return
+
+  public java.lang.String getFirst();
+    Code:
+       0: aload_0
+       1: getfield      #73                 // Field first:Ljava/lang/String;
+       4: areturn
+
+  public void setFirst(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #73                 // Field first:Ljava/lang/String;
+       5: return
+
+  public java.lang.String getLast();
+    Code:
+       0: aload_0
+       1: getfield      #78                 // Field last:Ljava/lang/String;
+       4: areturn
+
+  public void setLast(java.lang.String);
+    Code:
+       0: aload_0
+       1: aload_1
+       2: putfield      #78                 // Field last:Ljava/lang/String;
+       5: return
+}
+</code>
+        </pre>
+      </div>
+      <div class='col-md-4'>
+        <h2 class='text-center'>Static Compilation</h2>
+        <pre>
+          <code class='assembly'>Compiled from "Person.groovy"
+public class Person implements groovy.lang.GroovyObject {
+  public static transient boolean __$stMC;
+
+  public Person();
+    Code:
+       0: aload_0
+       1: invokespecial #20                 // Method java/lang/Object."&lt;init&gt;":()V
+       4: aload_0
+       5: invokevirtual #24                 // Method $getStaticMetaClass:()Lgroovy/lang/MetaClass;
+       8: astore_1
+       9: aload_1
+      10: aload_0
+      11: swap
+      12: putfield      #26                 // Field metaClass:Lgroovy/lang/MetaClass;
+      15: return
 
   protected groovy.lang.MetaClass $getStaticMetaClass();
     Code:
